--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <img src="vincent-lin-qyixAbZjNIY-unsplash.jpg" alt="mountains">
             <label for="imageAuthor" class="labelAuthor">Photo by <a href="https://unsplash.com/@darth_u?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Vincent Lin</a> on <a href="https://unsplash.com/photos/green-trees-on-mountain-during-daytime-qyixAbZjNIY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             </label>
+            <div class="odinLogo">
+                <img src="odin-lined.png" alt="logo">
+            </div>
         </div>
         <div class="userForm">
             <h1>This is not a real online service! This is a test form created with the Odin Project path</h1>
@@ -30,7 +33,7 @@
                 <input type="password" id="cpsw" name="confirmPassword">
                 <button type="submit">CREATE ACCOUNT</button>
             </form>
-            <h3>Already have an account? <a>Log in</a></h3>
+            <h3>Already have an account? <a class="login">Log in</a></h3>
         </div>      
     </div>
 </body>
