add final features

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="userForm">
-            <h1>This is not a real online service! This is a test form created with the Odin Project path</h1>
+            <h1 class="warningTitle">This is not a real online service! This is a test form created with the Odin Project path</h1>
             <form class="formBox">
                 <label for="firstName">FIRST NAME</label>
                 <input type="text" id="firstName" name="firstName">
